--- a/src/components/item/item.ios.scss
+++ b/src/components/item/item.ios.scss
@@ -16,10 +16,10 @@ $item-ios-paragraph-font-size:            1.4rem !default;
 $item-ios-paragraph-text-color:           #8e9093 !default;
 
 /// @prop - Size of the avatar in the item
-$item-ios-avatar-size:                    3.6rem !default;
+$item-ios-avatar-size:                    36px !default;
 
 /// @prop - Size of the thumbnail in the item
-$item-ios-thumbnail-size:                 5.6rem !default;
+$item-ios-thumbnail-size:                 56px !default;
 
 /// @prop - Shows the detail arrow icon on an item
 $item-ios-detail-push-show:               true !default;
@@ -133,16 +133,6 @@ $item-ios-sliding-content-background:     $list-ios-background-color !default;
   margin-left: 0;
 }
 
-.item-ios ion-avatar[item-left],
-.item-ios ion-thumbnail[item-left] {
-  margin: ($item-ios-padding-right / 2) $item-ios-padding-right ($item-ios-padding-right / 2) 0;
-}
-
-.item-ios ion-avatar[item-right],
-.item-ios ion-thumbnail[item-right] {
-  margin: ($item-ios-padding-right / 2);
-}
-
 .item-ios .item-button {
   padding: 0 .5em;
 
@@ -156,26 +146,52 @@ $item-ios-sliding-content-background:     $list-ios-background-color !default;
   padding: 0 1px;
 }
 
+.item-ios ion-avatar[item-left],
+.item-ios ion-thumbnail[item-left] {
+  margin: ($item-ios-padding-right / 2) $item-ios-padding-right ($item-ios-padding-right / 2) 0;
+}
+
+.item-ios ion-avatar[item-right],
+.item-ios ion-thumbnail[item-right] {
+  margin: ($item-ios-padding-right / 2);
+}
+
+
+// iOS Item Avatar
+// --------------------------------------------------
+
 .item-ios ion-avatar {
   min-width: $item-ios-avatar-size;
   min-height: $item-ios-avatar-size;
 }
 
-.item-ios ion-avatar img {
-  max-width: $item-ios-avatar-size;
-  max-height: $item-ios-avatar-size;
+.item-ios ion-avatar ion-img {
+  width: $item-ios-avatar-size;
+  height: $item-ios-avatar-size;
 
   border-radius: $item-ios-avatar-size / 2;
+
+  overflow: hidden;
 }
+
+.item-ios ion-avatar img {
+  width: $item-ios-avatar-size;
+  height: $item-ios-avatar-size;
+}
+
+
+// iOS Item Thumbnail
+// --------------------------------------------------
 
 .item-ios ion-thumbnail {
   min-width: $item-ios-thumbnail-size;
   min-height: $item-ios-thumbnail-size;
 }
 
+.item-ios ion-thumbnail ion-img,
 .item-ios ion-thumbnail img {
-  max-width: $item-ios-thumbnail-size;
-  max-height: $item-ios-thumbnail-size;
+  width: $item-ios-thumbnail-size;
+  height: $item-ios-thumbnail-size;
 }
 
 
